# walleys-analytics

./: .gitignore  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/charts/: CategoryBreakdownChart.tsx  RevenueChart.tsx  TopProductsChart.tsx
src/components/layout/: DateRangePicker.tsx  Sidebar.tsx
src/components/ui/: StatCard.tsx  (+4 more)
src/db/: database.ts  dbUtils.ts
src/engine/: analyticsEngine.ts  basketEngine.ts  catalogueAuditEngine.ts  catalogueExporter.ts  categoryClassifier.ts  csvParser.ts  forecastEngine.ts  importEngine.ts  pdfExport.ts  purchaseOrderEngine.ts  reportEngine.ts  squareAPIClient.ts  squareAuth.ts  squareSyncEngine.ts  xlsxParser.ts
src/hooks/: useAutoSync.ts  useRestockAlertCount.ts
src/store/: dateRangeStore.ts
src/types/: models.ts
src/views/: AccountantReportView.tsx  AnomalyView.tsx  BasketAnalysisView.tsx  BundleView.tsx  CatalogueCheckerView.tsx  CatalogueProductsView.tsx  CustomerView.tsx  DashboardView.tsx  DeadStockView.tsx  ForecastView.tsx  ImportView.tsx  InventoryView.tsx  OpexView.tsx  PriceOptimizationView.tsx  ProductDetailView.tsx  ProfitView.tsx  PurchaseOrderView.tsx  ReportsView.tsx  RestockView.tsx  SeasonalView.tsx  SquareCallbackView.tsx  SquareSyncView.tsx  StaffShiftView.tsx  StaffView.tsx  TimeAnalysisView.tsx
